--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.6.0",
     "immer": "^10.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "nuqs": "^2.2.3",
     "react": "^18.3.1",
