--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "emoji-mart": "^5.6.0",
     "immer": "^10.1.1",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.469.0",
+    "lucide-react": "^0.544.0",
     "nuqs": "^2.2.3",
     "react": "^18.3.1",
     "react-dark-mode-toggle": "^0.2.0",
@@ -45,6 +45,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^7.1.1",
+    "recharts": "2.15.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
